Fixed card blurring

--- a/client/src/components/styles/card.css
+++ b/client/src/components/styles/card.css
@@ -5,20 +5,18 @@
 	max-height: 18rem;
 	background-color: var(--primary-color);
 	border-radius: 10px;
-	transition: max-height 0.2s;
 	overflow: hidden;
+	filter: blur(0);
+	transition: max-height 0.4s ease-in, filter 0.4s ease-in;
 }
 
 .card.expanded {
 	max-height: 30rem;
 }
 
-@keyframes card-blur {
-	0% { filter: blur(0px); }
-	100% { filter: blur(8px); }
-}
 .card.blur {
-	animation: card-blur 1s forwards ease-out;
+	filter: blur(8px);
+	transition: filter 0.4s ease-out;
 }
 
 .card-title {
